[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mv0401"
version = "0.1.0"
description = "Python Telnet wrapper for the MV0401 device"
authors = [{ name = "Justin Faulk", email = "jfaulk@proitav.us" }]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/JFaulk1434/mv0401"
