[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mv0401"
version = "0.1.0"
description = "Python Telnet wrapper for the MV0401 device"
authors = [{ name = "Justin Faulk" }]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
